--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -173,7 +173,7 @@ table {
   justify-content: center;
   text-align: center;
   text-transform: uppercase;
-  font-size: 24px;
+  font-size: 0;
   padding: 0;
   height: 45px;
   line-height: 45px;
@@ -181,10 +181,8 @@ table {
   font-weight: bold;
   width: 100%;
   color: #f7dca9;
-  border: 0.4166666667vw solid #e7f2f4;
-  background-image: linear-gradient(to bottom, #865b8f, #604254);
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
+  border: none;
+  background: url("../images/label-dangnhap.png") 0/100% no-repeat;
 }
 .wrapper-sum .box-login .nav-tabs a span {
   display: block;
@@ -195,23 +193,6 @@ table {
 .wrapper-sum .box-login .nav-tabs a:last-child {
   float: right;
   margin-right: 0;
-  display: none;
-}
-.wrapper-sum .box-login .nav-tabs a.active {
-  width: 100%;
-  background-image: linear-gradient(to bottom, #d5901c, #fae777);
-  color: #190603;
-  font-weight: 900;
-  font-size: 30px;
-  border: 0.5555555556vw solid #f6d06b;
-}
-.wrapper-sum .box-login .nav-tabs a.active span {
-  display: block;
-  background: -webkit-linear-gradient(-86deg, #f2e774 5%, #faf3ae 53%, #ffffff 91%);
-  -webkit-background-clip: text;
-  -webkit-text-stroke: 4px transparent;
-  color: #000;
-  -webkit-text-fill-color: #000;
 }
 .wrapper-sum .box-login .form-group {
   position: relative;
@@ -219,24 +200,18 @@ table {
 }
 .wrapper-sum .box-login .form-control {
   height: 40px;
-  background-color: rgba(0, 0, 0, 0.6) !important;
-  border: 1px solid #fff !important;
-  box-shadow: 0px 1px 6px #45ebff;
-  outline: 0 !important;
-  margin: 0 auto;
-  font-size: 14px;
-  color: #767879 !important;
-  border-radius: 10px;
+  padding: 10px;
+  background: linear-gradient(#fff 0 0) padding-box, linear-gradient(to bottom, #eaa754, #fffe35) border-box;
+  border: 2px solid transparent;
+  border-radius: 15px;
+  display: inline-block;
   padding: 0 6.25vw 0 6.9444444444vw;
 }
 .wrapper-sum .box-login .form-control::-moz-placeholder {
-  color: #767879;
-}
-.wrapper-sum .box-login .form-control:-ms-input-placeholder {
-  color: #767879;
+  color: #723810;
 }
 .wrapper-sum .box-login .form-control::placeholder {
-  color: #767879;
+  color: #723810;
 }
 .wrapper-sum .box-login .user-name:before {
   content: "";
@@ -279,7 +254,7 @@ table {
   border: 0.4166666667vw solid #3a1e58;
   box-shadow: inset 0 0 10px #474699;
   border-radius: 1.3888888889vw;
-  background-color: rgba(0, 0, 0, 0.3803921569);
+  background-color: #000;
   position: relative;
   margin-bottom: 11.1111111111vw;
 }
@@ -336,7 +311,7 @@ table {
   margin: 2.7777777778vw auto;
   background: url("../images/bvd-tach_0019_Group-1.png") 0/100% no-repeat;
   width: 62.2222222222vw;
-  height: 12.7777777778vw;
+  height: 15.8333333333vw;
 }
 .wrapper-sum .btn-download.btn-ios {
   background: url("../images/btn-download-ios.png") 0/100% no-repeat;
@@ -524,13 +499,11 @@ table {
   .fixCen {
     width: 720px;
   }
-
   .error, .errors {
     font-size: 14px;
   }
-
   .wrapper-sum {
-    background: url("../images/bg.jpg") 50% 0 no-repeat #000000;
+    background: url("../images/bg.jpg") 50% -110px no-repeat #000000;
     background-size: 1920px auto;
     width: 100%;
   }
@@ -587,22 +560,21 @@ table {
     padding: 0 32px;
   }
   .wrapper-sum .box-login .nav-tabs a {
-    font-size: 24px;
+    font-size: 0;
     height: 77px;
     line-height: 77px;
     margin-right: 1%;
     font-weight: bold;
-    border: 4px solid #e7f2f4;
+    background: url("../images/label-dangnhap.png") 0/100% no-repeat;
     margin-bottom: -3px;
-    width: 37%;
+    width: 100%;
   }
   .wrapper-sum .box-login .nav-tabs a:last-child {
     display: flex;
   }
   .wrapper-sum .box-login .nav-tabs a.active {
-    width: 62%;
-    font-size: 50px;
-    border: 3px solid #f6d06b;
+    width: 100%;
+    font-size: 0;
   }
   .wrapper-sum .box-login .nav-tabs a:nth-child(1) {
     border-radius: 0;
@@ -616,13 +588,18 @@ table {
     font-size: 16px;
     height: 70px;
     padding: 0 45px;
-    border-radius: 23px;
+    background: linear-gradient(#fff 0 0) padding-box, linear-gradient(to bottom, #eaa754, #fffe35) border-box;
+    color: #723810;
+    border: 3px solid transparent;
+    border-radius: 15px;
+    display: inline-block;
   }
   .wrapper-sum .box-login .tab-content {
     padding: 20px 20px 70px;
-    border: 0px solid #3a1e58;
-    box-shadow: inset 0 0 10px #474699;
-    border-radius: 10px;
+    background: linear-gradient(#000 0 0) padding-box, linear-gradient(to bottom, #eaa754, #fffe35) border-box;
+    border: 3px solid transparent;
+    border-radius: 20px;
+    box-shadow: 0px 1px 6px #8d560c;
     margin-bottom: 100px;
   }
   .wrapper-sum .box-login .user-name::before {
@@ -659,9 +636,9 @@ table {
     height: 132px;
   }
   .wrapper-sum .btn-download {
-    margin: 20px auto;
+    margin: 0 auto 20px;
     width: 448px;
-    height: 92px;
+    height: 114px;
   }
   .wrapper-sum .btn-dns {
     width: 398px;
@@ -789,10 +766,9 @@ table {
   justify-content: space-between;
   margin-bottom: 0 !important;
   position: relative;
-  background-color: rgba(0, 0, 0, 0.6) !important;
-  border: 1px solid #fff !important;
-  border-radius: 10px;
-  box-shadow: 0px 1px 6px #45ebff;
+  background: linear-gradient(#000 0 0) padding-box, linear-gradient(to bottom, #eaa754, #fffe35) border-box;
+  border: 2px solid transparent;
+  border-radius: 15px;
 }
 
 .box-captcha-2 {
@@ -821,10 +797,6 @@ table {
   color: #c6c8ca;
 }
 
-.box-captcha input:-ms-input-placeholder {
-  color: #c6c8ca;
-}
-
 .box-captcha input::placeholder {
   color: #c6c8ca;
 }
@@ -833,7 +805,7 @@ table {
   background-color: transparent;
   width: 100%;
   height: 40px;
-  color: #767879;
+  color: #fff;
   padding: 0 6.25vw;
   margin-left: 5px;
   margin-right: 15px;
@@ -841,13 +813,10 @@ table {
   flex: 1;
 }
 .box-captcha input::-moz-placeholder {
-  color: #767879;
-}
-.box-captcha input:-ms-input-placeholder {
-  color: #767879;
+  color: #fff;
 }
 .box-captcha input::placeholder {
-  color: #767879;
+  color: #fff;
 }
 
 #refresh {
@@ -877,9 +846,10 @@ table {
 @media only screen and (min-width: 720px) {
   .box-captcha {
     flex-direction: row;
+    background: linear-gradient(#fff 0 0) padding-box, linear-gradient(to bottom, #eaa754, #fffe35) border-box;
+    border: 3px solid transparent;
     border-radius: 23px;
   }
-
   .box-captcha-2 {
     width: 50%;
   }
@@ -889,13 +859,11 @@ table {
     margin-top: -12px;
     left: 10px;
   }
-
   .box-captcha input {
     height: 70px;
     border-radius: 23px;
     padding: 0 45px;
   }
-
   #refresh {
     width: 44px;
     height: 50px;
@@ -950,18 +918,15 @@ table {
     width: 214px;
     height: 69px;
   }
-
   .wrapper-sum .slogan1 {
     width: 328px;
     height: 550px;
     margin: 100px auto 15px;
   }
-
   .btn-dowload-d {
     width: 335px;
     height: 124px;
   }
-
   .btn-social {
     width: 215px;
     height: 77px;
