--- a/src/app.scss
+++ b/src/app.scss
@@ -251,10 +251,12 @@ table {
     }
     .tab-content{
       padding: vwm(20px) vwm(20px) vwm(70px);
-      border: vwm(3px) solid #3a1e58;
-      box-shadow:inset 0 0 10px #474699;
-      border-radius: vwm(10px);
-      background-color: #000;
+      background: 
+      linear-gradient(#000 0 0) padding-box, /*this is your grey background*/
+      linear-gradient(to bottom, #eaa754, #fffe35) border-box;
+      border: 2px solid transparent;
+      border-radius: 15px;
+      box-shadow: 0px 1px 6px #8d560c;
       position: relative;
       margin-bottom: vwm(80px);
     }
